--- a/astyanax/pom.xml
+++ b/astyanax/pom.xml
@@ -12,16 +12,22 @@
   <packaging>jar</packaging>
 
       <repositories>
-    <repository>
-    <id>akka-snapshots</id>
-    <snapshots>
-    <enabled>true</enabled>
-    </snapshots>
-    <url>http://repo.akka.io/snapshots/</url>
-    </repository>
+	    <repository>
+	    <id>akka-snapshots</id>
+	    <snapshots>
+	    <enabled>true</enabled>
+	    </snapshots>
+	    <url>http://repo.akka.io/snapshots/</url>
+	    </repository>
+
+	    <repository>
+	    <id>local-repo</id>
+	    <snapshots>
+	    <enabled>true</enabled>
+	    </snapshots>
+	    <url>file:///home/lalith/.m2/repository</url>
+	    </repository>
     </repositories>
-
-
 
   <dependencies>
      
