--- a/astyanax/pom.xml
+++ b/astyanax/pom.xml
@@ -39,7 +39,7 @@
      <dependency>
         <groupId>com.netflix.astyanax</groupId>
         <artifactId>astyanax</artifactId>
-        <version>1.56.42</version>
+        <version>2.0.2-SNAPSHOT</version>
      </dependency>
      <dependency>
       <groupId>com.google.guava</groupId>
