--- a/astyanaxToBuild/gradle/maven.gradle
+++ b/astyanaxToBuild/gradle/maven.gradle
@@ -76,10 +76,11 @@ task uploadMavenLocal(type:Upload, dependsOn: signArchives) {
 
                 // To test deployment locally, use the following instead of oss.sonatype.org
                 repository(url: "file://localhost/home/lalith/.m2/repository/")
-
+		uniqueVersion = false
                 // Closure to configure all the POM with extra info, common to all projects
                 pom.project {
                     name "${project.name}"
+                    version '2.0.2-SNAPSHOT'
                     description "${project.name} developed by Netflix"
                     developers {
                         developer {
